FEAT: MATCHING TRAINING
Starting with the matching training module

--- a/kununua_backend/scraper/templates/matching_training.html
+++ b/kununua_backend/scraper/templates/matching_training.html
@@ -24,11 +24,11 @@
             <span><bold>Precio oferta: </bold>{{ product1.offer_price }}</span>
             <span><bold>Categoría: </bold>{{ product1.category }}</span>
             <span><bold>Supermercado: </bold>{{ product1.supermarket }}</span>
-            <a target=”_blank” href="{{ product2.url }}">Enlace a web</a>
+            <a target=”_blank” href="{{ product1.url }}">Enlace a web</a>
         </div>
         <h1>VS</h1>
         <div class="product">
-            <img src="{{product2.image}}" alt="Producto1">
+            <img src="{{product2.image}}" alt="Producto2">
             <span><bold>Nombre: </bold>{{ product2.name }}</span>
             <span><bold>Precio: </bold>{{ product2.price }}</span>
             <span><bold>Precio unitario: </bold>{{ product2.unit_price }}</span>
@@ -46,16 +46,16 @@
     <div class="buttons-container">
         <form action="{% url 'scraper:matching_training' %}" method="POST">
             {% csrf_token %}
-            <input type="hidden" name="prod1_id" value="{{ product1.id }}">
-            <input type="hidden" name="prod2_id" value="{{ product2.id }}">
+            <input type="hidden" name="prod1_id" value="{{ product1.pseudo_id }}">
+            <input type="hidden" name="prod2_id" value="{{ product2.pseudo_id }}">
             <input type="hidden" name="matching" value="False">
             <input type="submit" id="no-button" value="NO">
         </form>
         
         <form action="{% url 'scraper:matching_training' %}" method="POST">
             {% csrf_token %}
-            <input type="hidden" name="prod1_id" value="{{ product1.id }}">
-            <input type="hidden" name="prod2_id" value="{{ product2.id }}">
+            <input type="hidden" name="prod1_id" value="{{ product1.pseudo_id }}">
+            <input type="hidden" name="prod2_id" value="{{ product2.pseudo_id }}">
             <input type="hidden" name="matching" value="True">
             <input type="submit" id="yes-button" value="SÍ">
         </form>
